@@ -250,6 +250,8 @@ void FlowControl::set_key(FlowKey* key, Packet* p)
     }
     else if (proto == IPPROTO_ICMP)
     {
+        // FIXIT-H-J segfault because p->ptrs.icmph is null
+        // shold be checking pkt type instead of ipproto?
         key->init(ip_api.get_src(), p->ptrs.icmph->type, ip_api.get_dst(), 0,
             proto, vlanId, mplsId, addressSpaceId);
     }
